--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.11.0",
     "cron": "^1.0.6",
+    "easymysql": "^0.2.7",
     "ejs": "^2.2.4",
     "express": "^3.2.6",
     "express-admin": "^1.2.6",
